# industrial-rag-pipeline

./: .gitignore  Makefile  README.md  main.py  playground.py  pyproject.toml
api/: README.md
api/endpoints/: documents.py  question.py
app/: README.md
app/pipeline/: extract.py  generate.py  index.py  retrieve.py
app/prompts/: rag.py
app/schemas/: schema.py
app/utils/: logger.py
notebooks/: evaluation.ipynb  rag_evaluation_results.json
tests/integration/: test_elastic_search_index.py  test_elastic_search_retrieve.py  test_generation_agent.py  test_pdf_reader.py
tests/integration/api/: test_api_documents.py  test_api_question.py
tests/integration/local/: test_elastic_search_retrieve.py  test_pdf_reader.py
