[project]
name = "industrial-rag-pipeline"
version = "0.1.0"
description = "A RAG Agent pipeline for Electrical Motor QA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "elasticsearch>=9.1.0",
    "fastapi>=0.116.1",
    "google-genai>=1.30.0",
    "langchain-google-genai>=2.1.9",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ragas>=0.3.1",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]
